xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__eqnames.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:copy xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" use-attribute-sets=\"foo bar baz\">Hello</xsl:copy>\"#)"
---
Ok(Instruction(Copy(Copy(
  select: None,
  copy_namespaces: true,
  inherit_namespaces: true,
  use_attribute_sets: Some([
    Name(
      name: "foo",
      prefix: None,
      namespace: None,
    ),
    Name(
      name: "bar",
      prefix: None,
      namespace: None,
    ),
    Name(
      name: "baz",
      prefix: None,
      namespace: None,
    ),
  ]),
  type_: None,
  validation: Strip,
  sequence_constructor: [
    Content(Text("Hello")),
  ],
  span: Span(
    start: 1,
    end: 9,
  ),
))))
