xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__eqnames_error.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse(r#\"<xsl:copy xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" use-attribute-sets=\"foo br!ken bar\">Hello</xsl:copy>\"#)"
---
Err(InvalidEqName(
  value: "br!ken",
  span: Span(
    start: 83,
    end: 89,
  ),
))
