xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__expand_text_disabled_should_not_expand_text.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\" expand-text=\"yes\"><xsl:if expand-text=\"no\" test=\"true()\">Hello {world}!</xsl:if></xsl:if>\"#)"
---
Ok(Instruction(If(If(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 63,
      end: 69,
    ),
  ),
  sequence_constructor: [
    Instruction(If(If(
      test: Expression(
        xpath: XPath(Expr([
          Path(PathExpr(
            steps: [
              PrimaryExpr(FunctionCall(FunctionCall(
                name: Name(
                  name: "true",
                  prefix: None,
                  namespace: Some("http://www.w3.org/2005/xpath-functions"),
                ),
                arguments: [],
              ))),
            ],
          )),
        ])),
        span: Span(
          start: 120,
          end: 126,
        ),
      ),
      sequence_constructor: [
        Content(Text("Hello {world}!")),
      ],
      span: Span(
        start: 90,
        end: 96,
      ),
    ))),
  ],
  span: Span(
    start: 1,
    end: 7,
  ),
))))
