xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__expand_text_should_expand_text.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\" expand-text=\"yes\">Hello {world}!</xsl:if>\"#)"
---
Ok(Instruction(If(If(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 63,
      end: 69,
    ),
  ),
  sequence_constructor: [
    Content(Text("Hello ")),
    Content(Value(Expression(
      xpath: XPath(Expr([
        Path(PathExpr(
          steps: [
            AxisStep(AxisStep(
              axis: Child,
              node_test: NameTest(Name(Name(
                name: "world",
                prefix: None,
                namespace: None,
              ))),
              predicates: [],
            )),
          ],
        )),
      ])),
      span: Span(
        start: 96,
        end: 101,
      ),
    ))),
    Content(Text("!")),
  ],
  span: Span(
    start: 1,
    end: 7,
  ),
))))
