xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__fork1.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:fork xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\"><xsl:sequence>Sequence 1</xsl:sequence><xsl:sequence>Sequence 2</xsl:sequence></xsl:fork>\"#)"
---
Ok(Instruction(Fork(Fork(
  fallbacks: [],
  content: SequenceFallbacks([
    (Sequence(
      select: None,
      sequence_constructor: [
        TextNode("Sequence 1"),
      ],
      standard: Standard(
        default_collation: None,
        default_mode: None,
        default_validation: None,
        exclude_result_prefixes: None,
        expand_text: None,
        extension_element_prefixes: None,
        use_when: None,
        version: None,
        xpath_default_namespace: None,
      ),
      span: Span(
        start: 60,
        end: 72,
      ),
    ), []),
    (Sequence(
      select: None,
      sequence_constructor: [
        TextNode("Sequence 2"),
      ],
      standard: Standard(
        default_collation: None,
        default_mode: None,
        default_validation: None,
        exclude_result_prefixes: None,
        expand_text: None,
        extension_element_prefixes: None,
        use_when: None,
        version: None,
        xpath_default_namespace: None,
      ),
      span: Span(
        start: 99,
        end: 111,
      ),
    ), []),
  ]),
  standard: Standard(
    default_collation: None,
    default_mode: None,
    default_validation: None,
    exclude_result_prefixes: None,
    expand_text: None,
    extension_element_prefixes: None,
    use_when: None,
    version: None,
    xpath_default_namespace: None,
  ),
  span: Span(
    start: 1,
    end: 9,
  ),
))))
