xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__literal_result_element.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<foo/>\"#)"
---
Ok(Content(ElementNode(ElementNode(
  name: Name(
    namespace: "",
    local: "foo",
  ),
  attributes: {},
  sequence_constructor: [],
  span: Span(
    start: 1,
    end: 4,
  ),
))))
