xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__literal_result_element_with_standard_attribute.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<foo xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" xsl:expand-text=\"yes\"/>\"#)"
---
Ok(Content(Element(ElementNode(
  name: Name(
    name: "foo",
    prefix: None,
    namespace: None,
  ),
  attributes: {},
  sequence_constructor: [],
  span: Span(
    start: 1,
    end: 4,
  ),
))))
