xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__missing_required.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:variable xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" select=\"true()\">Hello</xsl:variable>\"#)"
---
Err(AttributeExpected(
  name: XmlName(
    namespace: "",
    local: "name",
  ),
  span: Span(
    start: 1,
    end: 13,
  ),
))
